docs_exported/1.17/crafttweaker/docs/vanilla/api/predicate/NbtPredicate.md
# NbtPredicate

## Importing the class

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import crafttweaker.api.predicate.NbtPredicate;
```


## Static Methods

:::group{name=any}

Return Type: [NbtPredicate](/vanilla/api/predicate/NbtPredicate)

```zenscript
// NbtPredicate.any() as NbtPredicate

NbtPredicate.any();
```

:::

:::group{name=create}

Return Type: [NbtPredicate](/vanilla/api/predicate/NbtPredicate)

```zenscript
NbtPredicate.create(data as IData) as NbtPredicate
```

| Parameter | Type | Description |
|-----------|------|-------------|
| data | [IData](/vanilla/api/data/IData) | No Description Provided |


:::

:::group{name=create}

Return Type: [NbtPredicate](/vanilla/api/predicate/NbtPredicate)

```zenscript
NbtPredicate.create(data as MapData) as NbtPredicate
```

| Parameter | Type | Description |
|-----------|------|-------------|
| data | [MapData](/vanilla/api/data/MapData) | No Description Provided |


:::

